crates/k-rust/tests/snapshots/inner_rules__brackets_shield_associativity.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Id ::= r\"[a-z]\" [token]\n  syntax Exp ::= Id\n  syntax Exp ::= \"(\" Exp \")\" [bracket]\n  syntax Exp ::= left: Exp \"+\" Exp [symbol(plus)]\n  rule a + (b + c) => (a + b) + c\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "plus(#token(\"a\",\"Id\"),plus(#token(\"b\",\"Id\"),#token(\"c\",\"Id\")))=>plus(plus(#token(\"a\",\"Id\"),#token(\"b\",\"Id\")),#token(\"c\",\"Id\"))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
