crates/k-rust/tests/snapshots/inner_rules__collapses_a_record_pattern_before_an_as_pattern.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Map ::= \".Map\" [symbol(dotMap)]\n  syntax Int ::= \"0\" [symbol(zero)]\n  syntax TypesInfo ::= \"#ti\" \"(\" t2i: Map \",\" count: Int \")\" [symbol(ti)]\n  syntax Result ::= \"use\" \"(\" TypesInfo \")\" [symbol(use)]\n  rule use(#ti(... t2i: M) #as TI) => use(TI)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "use(ti(#SemanticCastToMap(M),#SemanticCastToInt(_count0)) #as #SemanticCastToTypesInfo(TI))=>use(#SemanticCastToTypesInfo(TI))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
