crates/k-rust/tests/snapshots/inner_rules__collapses_a_record_with_a_rewrite_in_a_field.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Defn ::= \"t\" [symbol(t)]\n  syntax Defns ::= List{Defn, \"\"} [symbol(listDefns), terminator-symbol(\".Defns\")]\n  syntax ModuleDecl ::= \"#module\" \"(\" types: Defns \",\" funcs: Defns \")\" [symbol(aModuleDecl)]\n  syntax Result ::= \"#structureModule\" \"(\" Defns \",\" ModuleDecl \")\" [symbol(structureModule)]\n  rule #structureModule((T:Defn DS:Defns => DS), #module(... types: TS => T TS))\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "structureModule(listDefns(#SemanticCastToDefn(T),#SemanticCastToDefns(DS))=>#SemanticCastToDefns(DS),aModuleDecl(#SemanticCastToDefns(TS)=>listDefns(#SemanticCastToDefn(T),#SemanticCastToDefns(TS)),#SemanticCastToDefns(_funcs0)))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
