crates/k-rust/tests/snapshots/inner_rules__collapses_record_productions_and_fills_omitted_fields.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax Pair ::= \"pair\" \"(\" left: Int \",\" right: Int \")\" [symbol(pair)]\n  rule pair(... right: 2, left: 1) => pair(... left: 3)\n  rule pair(... left: 4) => pair(... left: 5)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "pair(#token(\"1\",\"Int\"),#token(\"2\",\"Int\"))=>pair(#token(\"3\",\"Int\"),#SemanticCastToInt(_right0))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
    SentenceSummary {
        kind: "rule",
        body: "pair(#token(\"4\",\"Int\"),#SemanticCastToInt(_right0))=>pair(#token(\"5\",\"Int\"),#SemanticCastToInt(_right1))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
