crates/k-rust/tests/snapshots/inner_rules__does_not_duplicate_explicit_kitem_subsorts.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax KItem\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax Bytes ::= \"bytes\" [symbol(bytes)]\n  syntax String ::= \"\\\"\\\"\" [symbol(emptyString)]\n  syntax Map ::= \".Map\" [symbol(.Map)]\n  syntax Int ::= \"lengthBytes\" \"(\" Bytes \")\" [symbol(lengthBytes), function]\n               | Bytes \"[\" Int \"]\" [symbol(bytesGet), function]\n  syntax Bool ::= Int \">Int\" Int [symbol(_>Int_), function]\n                | Int \"=/=Int\" Int [symbol(_=/=Int_), function]\n                | Bool \"andBool\" Bool [symbol(_andBool_), function, left]\n  syntax Tree ::= \".Tree\" [symbol(.Tree)]\n                | \"branch\" \"(\" Map \",\" String \")\" [symbol(branch)]\n                | \"leaf\" \"(\" Bytes \",\" String \")\" [symbol(leaf)]\n  syntax KItem ::= Tree\n  syntax Tree ::= \"put\" \"(\" Tree \",\" Bytes \",\" String \")\" [symbol(put), function]\n  rule put(leaf(LEAFPATH, LEAFVALUE), PATH, VALUE)\n    => put(put(branch(.Map, \"\"), LEAFPATH, LEAFVALUE), PATH, VALUE)\n    requires lengthBytes(LEAFPATH) >Int 0\n     andBool lengthBytes(PATH) >Int 0\n     andBool LEAFPATH[0] =/=Int PATH[0]\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "put(leaf(#SemanticCastToBytes(LEAFPATH),#SemanticCastToString(LEAFVALUE)),#SemanticCastToBytes(PATH),#SemanticCastToString(VALUE))=>put(put(branch(`.Map`(.KList),emptyString(.KList)),#SemanticCastToBytes(LEAFPATH),#SemanticCastToString(LEAFVALUE)),#SemanticCastToBytes(PATH),#SemanticCastToString(VALUE))",
        requires: "`_andBool_`(`_andBool_`(`_>Int_`(lengthBytes(#SemanticCastToBytes(LEAFPATH)),#token(\"0\",\"Int\")),`_>Int_`(lengthBytes(#SemanticCastToBytes(PATH)),#token(\"0\",\"Int\"))),`_=/=Int_`(bytesGet(#SemanticCastToBytes(LEAFPATH),#token(\"0\",\"Int\")),bytesGet(#SemanticCastToBytes(PATH),#token(\"0\",\"Int\"))))",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
