crates/k-rust/tests/snapshots/inner_rules__does_not_duplicate_generated_sort_lattice_productions.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax KBott\n  syntax KItem\n  syntax {Sort} Sort ::= KBott\n  syntax {Sort} KItem ::= Sort\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax Bool ::= Int \"<Int\" Int [symbol(_<Int_)]\n  syntax Buf ::= \".Buf\" [symbol(.Buf)]\n  syntax Buf ::= Buf \"[\" Int \":=\" Buf \"]\" [symbol(write), function]\n  rule _ [ START := _ ] => .Buf requires START <Int 0\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "write(#SemanticCastToBuf(_),#SemanticCastToInt(START),#SemanticCastToBuf(_))=>`.Buf`(.KList)",
        requires: "`_<Int_`(#SemanticCastToInt(START),#token(\"0\",\"Int\"))",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
