crates/k-rust/tests/snapshots/inner_rules__infers_a_rule_parameter_used_only_by_an_argument.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax {S} Int ::= \"take(\" S \")\" [symbol(take)]\n  rule take(1) => 1\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "take(#token(\"1\",\"Int\"))=>#token(\"1\",\"Int\")",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
