crates/k-rust/tests/snapshots/inner_rules__infers_an_anonymous_bag_variable.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Result ::= \"clear\" \"(\" Bag \")\" [symbol(clear)]\n  rule clear(_) => clear(.Bag)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "clear(#SemanticCastToBag(_))=>clear(#cells(.KList))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
