crates/k-rust/tests/snapshots/inner_rules__infers_anonymous_collection_values_at_their_exact_kitem_sort.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Val ::= \"a\" [symbol(a)]\n  syntax KItem ::= Val\n  syntax Map ::= \".Map\" [symbol(dotMap)]\n               | KItem \"|->\" KItem [symbol(mapEntry)]\n  syntax KItem ::= Map\n  rule (a |-> _) => .Map\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "mapEntry(a(.KList),#SemanticCastToKItem(_))=>dotMap(.KList)",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
