crates/k-rust/tests/snapshots/inner_rules__infers_anonymous_variable_occurrences_independently.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax A ::= \"a\" [symbol(a)]\n  syntax B ::= \"b\" [symbol(b)]\n  syntax Pair ::= \"pair(\" A \",\" B \")\" [symbol(pair)]\n  rule pair(_, _) => pair(_, _)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "pair(#SemanticCastToA(_),#SemanticCastToB(_))=>pair(#SemanticCastToA(_),#SemanticCastToB(_))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
